<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_16"
    tools:context=".MainActivity">

    <TextView
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="@dimen/sp_26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_main"/>
    <Button
        android:id="@+id/btn_act_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/activity_a" />
    <Button
        android:layout_margin="@dimen/dp_16"
        android:layout_centerHorizontal="true"
        android:text="@string/rotate_act"
        android:layout_below="@id/btn_act_a"
        android:id="@+id/btn_act_rotate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</RelativeLayout>