<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.BActivity"
    android:padding="@dimen/dp_16">
    <TextView
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/sp_26"
        android:text="@string/activity_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btn_act_bc"
        android:textAllCaps="false"
        android:text="@string/activity_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>
    <Button
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_act_bc"
        android:text="@string/str_c_finish"
        android:id="@+id/btn_str_c_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</RelativeLayout>